WRR-4972: Fixed `PageViews` and `QuickGuidePanels` dot page indicators to be aligned center (#1730)
* WRR-4972: Fixed `PageViews` dot page indicators to align center

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* fix QuickGuidePanels to show page indicators properly

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* little enhancement

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

--- a/PageViews/PageViews.module.less
+++ b/PageViews/PageViews.module.less
@@ -32,7 +32,7 @@
 		width: @sand-pageviews-number-navigation-button-area-width;
 	}
 
-	.steps {
+	.stepsRow {
 		align-items: center;
 		justify-content: center;
 		text-align: center;
@@ -42,7 +42,7 @@
 		}
 	}
 
-	&.number .steps {
+	&.number .stepsRow {
 		min-height: @sand-pageviews-number-steps-area-min-height;
 		.pageNumber {
 			width: @sand-pageviews-number-steps-number-width;
@@ -53,15 +53,17 @@
 	}
 
 	&.dot .steps {
+		display: flex;
+		align-items: center;
 		min-height: @sand-pageviews-dot-steps-area-min-height;
 	}
 
-	&.fullContents .steps {
+	&.fullContents .stepsRow {
 		position: absolute;
 		align-self: center;
 	}
 
-	&.fullContents.indicatorBottom .steps {
+	&.fullContents.indicatorBottom .stepsRow {
 		bottom: @sand-pageviews-full-contents-bottom-steps-bottom;
 	}
 
